Sun Sep 12 09:48:29 2021  Rob Lauer  <rlauer6@comcast.net>

	* Makefile.am:
	- use $(abs_builddir), not $(top_srcdir)
	- remove ALL_REQUIREMENTS
	* autoconf-template-perl.spec.in
	- remove Group
	- add @LICENSE@, @ARCHITECTURE@
	- removed definition of vhostdir
	- add options --with-license, --with-architecture
	- explicitly install CPAN files during build phase
	- install files from resources
	* configure.ac
	(do_subst): add @LICENSE@, @ARCHITECTURE@
	* includes/perlcritic.inc
	- add individual targets for .pl, .pm, .cgi files
	- CHECK_ALL flag to continue on perlcritic errors
	* resources/Makefile.am: add example.txt
	* configure.ac
	- --with-license, --with-architecture
	* utils/init.pl
	(main): new -  modulino pattern
	- removed extra instructions, refer to README
	(write_file): new
	(create_readme): new
	(create_install): new
	(create_copying): new
	(create_makefile): new

Thu Sep   17:41:09 2021  Rob Lauer  <rlauer6@comcast.net>

	[bugs]
	* autoconf-template-perl.spec.in: x86_64
	* utils/find-perl-requires.sh: remove perl as dependency
	* utils/is-core.pl
	- check if module is installed even if it is reported to be core
	* utils/perl-deps.pl
	- add trailing slash to module list
	- avoid trailing slash if no modules in directory

Fri Sep  3 08:46:09 2021  Rob Lauer  <rlauer6@comcast.net>
	* git version first check-in

2016-05-17 Rob Lauer <rlauer6@comcast.net>
	* src/main/perl/Makefile.am: -cgi-bin

2016-05-16 Rob Lauer <rlauer6@comcast.net>
	* autoconf-template-perl.spec.in
	- perl5libdir
	- configure

2016-05-06 Rob Lauer <rlauer6@comcast.net>
	* src/main/perl/cgi-bin/Makfile.am: new
	* src/main/perl/Makefile.am: cgi-bin
	* fixup-project: /usr default prefix
	* config/Makefile.am: removed unnecessary assignments
	* directories.inc: tbc specfic directories
	* configure.ac
	(ads_PERL_MODULE): +Bedrock, -foreign modules
	* src/main/perl/bin/Makefile.am: tbc specific man pages
	* src/main/perl/lib/Makefile.am: likewise

2015-12-03 Rob Lauer <rlauer6@comcast.net>